--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>react-loadable-example</title>
+    <style>
+      body {
+        font: normal 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+        max-width: 600px;
+        margin: 0 auto;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
